[gd_scene load_steps=2 format=3 uid="uid://bcpy2y0h3bgld"]

[ext_resource type="Script" path="res://demo/spawner/spawner.gd" id="1_5jmdu"]

[node name="Spawner" type="Marker2D"]
script = ExtResource("1_5jmdu")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="on_spawn_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="on_game_timer_timeout"]
